--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -4,7 +4,7 @@
     font-family: 'Outfit';
     font-style: normal;
     font-weight: 400;
-    src: url('./fonts/outfit-v11-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/outfit-v11-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
   
   /* outfit-700 - latin */
@@ -13,7 +13,7 @@
     font-family: 'Outfit';
     font-style: normal;
     font-weight: 700;
-    src: url('./fonts/outfit-v11-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/outfit-v11-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
   
   /* outfit-900 - latin */
@@ -22,7 +22,7 @@
     font-family: 'Outfit';
     font-style: normal;
     font-weight: 900;
-    src: url('./fonts/outfit-v11-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/outfit-v11-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
   
 
